<resources>
    <string name="app_name">Homework02</string>
    <string name="limit">Limit:</string>
    <string name="artist">Artist</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort by:</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="loading">Loading...</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="Finish">Finish</string>
</resources>
